remove unused folder