@@ -17,15 +17,19 @@ import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import java.time.Duration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Semaphore;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 
-/**
- * Service that consumes tasks from Redis Stream and executes them
- */
 @Service
 @RequiredArgsConstructor
 @Slf4j
@@ -50,76 +54,113 @@ public class TaskStreamConsumer {
     @Value("${worker.error.sleep-ms:1000}")
     private long errorSleepMs;
 
-    /**
-     * Start the worker thread on application startup
-     */
+    @Value("${worker.virtual-threads.max-concurrent:1000}")
+    private int maxConcurrentTasks;
+
+    private ExecutorService virtualThreadExecutor;
+    private Semaphore taskSemaphore;
+    private final AtomicBoolean running = new AtomicBoolean(true);
+    private final AtomicInteger activeVirtualThreads = new AtomicInteger(0);
+
     @PostConstruct
     public void startConsumer() {
         if (consumerName == null || consumerName.trim().isEmpty()) {
             consumerName = "worker-" + UUID.randomUUID().toString().substring(0, 8);
         }
 
-        Thread consumerThread = new Thread(this::consumeTasksLoop, "TaskStreamConsumer");
-        consumerThread.setDaemon(true);
-        consumerThread.start();
+        virtualThreadExecutor = Executors.newVirtualThreadPerTaskExecutor();
+        taskSemaphore = new Semaphore(maxConcurrentTasks);
+        Thread.startVirtualThread(this::consumeTasksLoop);
 
-        log.info("🚀 Task stream consumer started: group={}, consumer={}, stream={}",
-                consumerGroup, consumerName, streamKey);
+        log.info("Task stream consumer started: group={}, consumer={}, stream={}, maxConcurrent={}",
+                consumerGroup, consumerName, streamKey, maxConcurrentTasks);
     }
 
-    /**
-     * Main consumer loop - continuously polls Redis Stream for tasks
-     */
+    @PreDestroy
+    public void shutdown() {
+        log.info("Shutting down Task Stream Consumer...");
+        running.set(false);
+
+        if (virtualThreadExecutor != null) {
+            virtualThreadExecutor.shutdown();
+            try {
+                if (!virtualThreadExecutor.awaitTermination(30, TimeUnit.SECONDS)) {
+                    virtualThreadExecutor.shutdownNow();
+                    log.warn("Forced shutdown after timeout");
+                }
+            } catch (InterruptedException e) {
+                virtualThreadExecutor.shutdownNow();
+                Thread.currentThread().interrupt();
+            }
+        }
+
+        log.info("Task Stream Consumer shutdown complete. Final active threads: {}", activeVirtualThreads.get());
+    }
+
     private void consumeTasksLoop() {
-        // Ensure consumer group exists
         ensureConsumerGroupExists();
 
-        while (!Thread.currentThread().isInterrupted()) {
+        while (running.get() && !Thread.currentThread().isInterrupted()) {
             try {
-                // Read messages from stream
                 List<MapRecord<String, Object, Object>> messages = readMessagesFromStream();
-
-                log.info("Message comming bro: messages={}", messages);
 
                 if (messages == null || messages.isEmpty()) {
                     continue;
                 }
 
-                // Process each message
+                log.debug("Received {} messages from stream", messages.size());
+
                 for (MapRecord<String, Object, Object> message : messages) {
-                    processTaskMessage(message);
-                    acknowledgeMessage(message);
+                    submitTaskForProcessing(message);
                 }
 
             } catch (Exception e) {
-                log.error("❌ Error in consumer loop: {}", e.getMessage(), e);
-                sleepOnError();
+                if (running.get()) {
+                    log.error("Error in consumer loop: {}", e.getMessage(), e);
+                    sleepOnError();
+                }
             }
         }
 
-        log.warn("Task stream consumer stopped");
+        log.info("Consumer loop stopped");
     }
 
-    /**
-     * Ensure the Redis Stream consumer group exists
-     */
+    private void submitTaskForProcessing(MapRecord<String, Object, Object> message) {
+        virtualThreadExecutor.submit(() -> {
+            try {
+                taskSemaphore.acquire();
+                int currentActive = activeVirtualThreads.incrementAndGet();
+                log.debug("Virtual thread started. Active: {}", currentActive);
+
+                try {
+                    processTaskMessage(message);
+                    acknowledgeMessage(message);
+                } finally {
+                    activeVirtualThreads.decrementAndGet();
+                    taskSemaphore.release();
+                }
+
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                log.warn("Task processing interrupted for message: {}", message.getId());
+            } catch (Exception e) {
+                log.error("Error processing task in virtual thread: {}", e.getMessage(), e);
+            }
+        });
+    }
+
     private void ensureConsumerGroupExists() {
         try {
-            // First, check if the stream exists by trying to get its length
-            // If stream doesn't exist, we need to create it first
             try {
                 redisTemplate.opsForStream().size(streamKey);
             } catch (Exception e) {
-                // Stream doesn't exist yet - it will be created when first message is published
-                log.info("📭 Stream '{}' doesn't exist yet, will be created when first message arrives", streamKey);
+                log.info("Stream '{}' doesn't exist yet, will be created when first message arrives", streamKey);
                 return;
             }
 
-            // Stream exists, now create consumer group
             redisTemplate.opsForStream().createGroup(streamKey, ReadOffset.latest(), consumerGroup);
-            log.info("✅ Created Redis Stream consumer group: {}", consumerGroup);
+            log.info("Created Redis Stream consumer group: {}", consumerGroup);
         } catch (Exception e) {
-            // Group already exists or stream doesn't exist yet - both are fine
             if (e.getMessage() != null && e.getMessage().contains("BUSYGROUP")) {
                 log.debug("Consumer group '{}' already exists", consumerGroup);
             } else if (e.getMessage() != null && e.getMessage().contains("no such key")) {
@@ -130,20 +171,15 @@ public class TaskStreamConsumer {
         }
     }
 
-    /**
-     * Read messages from Redis Stream
-     */
     @SuppressWarnings("unchecked")
     private List<MapRecord<String, Object, Object>> readMessagesFromStream() {
         try {
-            // Cast is safe because RedisTemplate<String, String> returns MapRecord with String values
             return (List<MapRecord<String, Object, Object>>) (List<?>) redisTemplate.opsForStream().read(
                     Consumer.from(consumerGroup, consumerName),
                     StreamReadOptions.empty().block(Duration.ofSeconds(pollTimeoutSeconds)),
                     StreamOffset.create(streamKey, ReadOffset.lastConsumed())
             );
         } catch (Exception e) {
-            // If stream or consumer group doesn't exist, try to create it
             if (e.getMessage() != null &&
                 (e.getMessage().contains("NOGROUP") || e.getMessage().contains("no such key"))) {
                 log.debug("Stream or consumer group not ready yet, will retry...");
@@ -154,56 +190,37 @@ public class TaskStreamConsumer {
         }
     }
 
-    /**
-     * Process a task message from the stream
-     */
     private void processTaskMessage(MapRecord<String, Object, Object> record) {
-        try {
-            // Extract task data from message
-            Map<Object, Object> messageData = record.getValue();
+        long startTime = System.currentTimeMillis();
+        String threadName = Thread.currentThread().toString();
 
-            // Log raw message for debugging
-            log.info("📦 Raw message data: {}", messageData);
-            log.info("📦 Message keys: {}", messageData.keySet());
+        try {
+            Map<Object, Object> messageData = record.getValue();
 
             String workflowRunId = getStringValue(messageData, "workflowRunId");
             String taskId = getStringValue(messageData, "taskId");
             String taskType = getStringValue(messageData, "taskType");
 
-            // Also try "command" field for backward compatibility
-            String command = getStringValue(messageData, "command");
-
-            log.info("📦 Extracted values - workflowRunId: {}, taskId: {}, taskType: {}, command: {}",
-                    workflowRunId, taskId, taskType, command);
-
-            // Default to SHELL if taskType is not provided
             if (taskType == null || taskType.trim().isEmpty()) {
                 taskType = "SHELL";
             }
 
-            log.info("👷 Worker received task: workflowRunId={}, taskId={}, type={}",
-                    workflowRunId, taskId, taskType);
+            log.info("[{}] Processing task: workflowRunId={}, taskId={}, type={}", threadName, workflowRunId, taskId, taskType);
 
-            // Build execution context
             TaskExecutionContext context = buildExecutionContext(messageData, workflowRunId, taskId, taskType);
-
-            // Execute task
             TaskExecutionResult result = executeTask(context);
 
-            // Update health metrics
             WorkerHealthIndicator.recordTaskProcessed();
-
-            // Report completion back to orchestrator
             reportTaskCompletion(workflowRunId, taskId, result);
 
+            long duration = System.currentTimeMillis() - startTime;
+            log.info("[{}] Task {} completed in {}ms", threadName, taskId, duration);
+
         } catch (Exception e) {
-            log.error("❌ Error processing task message: {}", e.getMessage(), e);
+            log.error("Error processing task message: {}", e.getMessage(), e);
         }
     }
 
-    /**
-     * Safely extract String value from message data
-     */
     private String getStringValue(Map<Object, Object> map, String key) {
         Object value = map.get(key);
         if (value == null) {
@@ -212,29 +229,22 @@ public class TaskStreamConsumer {
         return value.toString();
     }
 
-    /**
-     * Build task execution context from message data
-     */
     private TaskExecutionContext buildExecutionContext(Map<Object, Object> messageData,
                                                        String workflowRunId,
                                                        String taskId,
                                                        String taskType) {
-        // Extract config
         Map<String, Object> config = new HashMap<>();
 
-        // For backward compatibility: if "command" is present at root level, use it
         if (messageData.containsKey("command")) {
             config.put("command", getStringValue(messageData, "command"));
         }
 
-        // If config map is provided, merge it
         if (messageData.containsKey("config") && messageData.get("config") instanceof Map) {
             @SuppressWarnings("unchecked")
             Map<String, Object> configMap = (Map<String, Object>) messageData.get("config");
             config.putAll(configMap);
         }
 
-        // Extract timeout if present
         Long timeout = null;
         if (messageData.containsKey("timeout")) {
             try {
@@ -243,7 +253,6 @@ public class TaskStreamConsumer {
                 log.warn("Invalid timeout value: {}", messageData.get("timeout"));
             }
         }
-        // Also check for timeoutSeconds field
         if (messageData.containsKey("timeoutSeconds")) {
             try {
                 timeout = Long.parseLong(messageData.get("timeoutSeconds").toString());
@@ -261,57 +270,36 @@ public class TaskStreamConsumer {
                 .build();
     }
 
-    /**
-     * Execute the task using the appropriate executor
-     */
     private TaskExecutionResult executeTask(TaskExecutionContext context) {
         try {
-            // Get the appropriate executor
             TaskExecutor executor = executorFactory.getExecutor(context.getTaskType());
+            log.info("Executing task {} with {} executor", context.getTaskId(), context.getTaskType());
 
-            log.info("Executing task {} with {} executor",
-                    context.getTaskId(), context.getTaskType());
-
-            // Execute the task
             TaskExecutionResult result = executor.execute(context);
             result.setSuccess(Boolean.TRUE);
+
             if (result.isSuccess()) {
-                log.info("✅ Task {} completed successfully in {}ms",
-                        context.getTaskId(), result.getExecutionTimeMs());
+                log.info("Task {} completed successfully in {}ms", context.getTaskId(), result.getExecutionTimeMs());
             } else {
-                log.error("❌ Task {} failed: {}",
-                         context.getTaskId(), result.getErrorMessage());
+                log.error("Task {} failed: {}", context.getTaskId(), result.getErrorMessage());
             }
 
             return result;
 
         } catch (ExecutorFactory.UnsupportedTaskTypeException e) {
-            log.error("❌ Unsupported task type '{}' for task {}",
-                     context.getTaskType(), context.getTaskId());
+            log.error("Unsupported task type '{}' for task {}", context.getTaskType(), context.getTaskId());
             return TaskExecutionResult.failure("Unsupported task type: " + context.getTaskType());
 
         } catch (Exception e) {
-            log.error("❌ Unexpected error executing task {}: {}",
-                     context.getTaskId(), e.getMessage(), e);
+            log.error("Unexpected error executing task {}: {}", context.getTaskId(), e.getMessage(), e);
             return TaskExecutionResult.failure("Execution error: " + e.getMessage());
         }
     }
 
-    /**
-     * Report task completion to orchestrator
-     */
     private void reportTaskCompletion(String workflowRunId, String taskId, TaskExecutionResult result) {
-        callbackService.reportTaskCompletion(
-                workflowRunId,
-                taskId,
-                result.isSuccess(),
-                result.getErrorMessage()
-        );
+        callbackService.reportTaskCompletion(workflowRunId, taskId, result.isSuccess(), result.getErrorMessage());
     }
 
-    /**
-     * Acknowledge message in Redis Stream
-     */
     private void acknowledgeMessage(MapRecord<String, Object, Object> message) {
         try {
             redisTemplate.opsForStream().acknowledge(streamKey, consumerGroup, message.getId());
@@ -321,14 +309,19 @@ public class TaskStreamConsumer {
         }
     }
 
-    /**
-     * Sleep after error to avoid tight loop
-     */
     private void sleepOnError() {
         try {
             Thread.sleep(errorSleepMs);
         } catch (InterruptedException ie) {
             Thread.currentThread().interrupt();
         }
+    }
+
+    public int getActiveVirtualThreadCount() {
+        return activeVirtualThreads.get();
+    }
+
+    public int getAvailablePermits() {
+        return taskSemaphore.availablePermits();
     }
 }
